Added change grid size functionality.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="changeSize">
+        <label for="gridSize">Input grid size: </label>
+        <input name="gridSize" type="number">
+        <button type="button"">Change size</button>
+    </div>
     <div class="container"></div>
 </body>
 </html>
